Fix dark mode text colour (#684)
* fix google site link issue


* fix google site link issue


* revert quote formatting changes


* fix dark mode text colour


---------

--- a/src/components/Ecosystem/styles.module.css
+++ b/src/components/Ecosystem/styles.module.css
@@ -192,7 +192,7 @@
 }
 
 .label {
-  color: #111827;
+  color: var(--ifm-heading-color);
   font-size: 0.78rem;
   font-weight: 700;
   line-height: 1.2;
